# qrs

./: .gitignore  Cargo.toml  LICENSE  README.md
libs/core/qautodiff/: Cargo.toml
libs/core/qautodiff/src/: error.rs  expr.rs  graph.rs  lib.rs
libs/core/qautodiff/src/graph/: grads.rs  graph.rs  tape.rs
libs/core/qchrono/: Cargo.toml
libs/core/qchrono/src/: calendar.rs  duration.rs  ext.rs  lib.rs  timepoint.rs
libs/core/qchrono/src/calendar/: calendar.rs  calendar_impl.rs  data_src.rs  holadj.rs  src.rs  sym.rs
libs/core/qchrono/src/duration/: duration_impl.rs  tenor.rs
libs/core/qchrono/src/timepoint/: date.rs  datetime.rs  timezone.rs
libs/core/qcollections/: Cargo.toml
libs/core/qcollections/src/: flat_dict.rs  flat_map.rs  lib.rs  size_ensured.rs
libs/core/qcollections/src/flat_dict/: container.rs  error.rs
libs/core/qcollections/src/flat_map/: container.rs
libs/core/qcollections/src/size_ensured/: container.rs  error.rs  impls.rs
libs/core/qmath/: Cargo.toml
libs/core/qmath/src/: ext.rs  interp1d.rs  lib.rs  num.rs
libs/core/qmath/src/interp1d/: lerp.rs  pwconst.rs  traits.rs
libs/core/qmath/src/num/: algebra.rs  bounded.rs  elementary_fn.rs  func1d.rs  relpos.rs  weak_minmax.rs
libs/core/qrs_chrono/: Cargo.toml
libs/core/qrs_chrono/src/: builder.rs  calendar.rs  calendar_src.rs  calendar_sym.rs  date_ext.rs  date_with_tag.rs  date_with_timecut.rs  datetime.rs  datetime_builder.rs  duration.rs  holiday_adj.rs  lib.rs  tenor.rs  timecut.rs  timezone.rs  velocity.rs
libs/core/qrs_chrono/src/calendar/: calendar.rs  calendar_src.rs  calendar_sym.rs
libs/core/qrs_collections/: Cargo.toml
libs/core/qrs_collections/src/: lazy_typed_vec.rs  lib.rs  min_sized.rs  series.rs
libs/core/qrs_datasrc/: Cargo.toml
libs/core/qrs_datasrc/qrs_datasrc_derive/: Cargo.toml
libs/core/qrs_datasrc/qrs_datasrc_derive/src/: debug_tree.rs  lib.rs
libs/core/qrs_datasrc/src/: _private.rs  _test_util.rs  cache_proxy.rs  datasrc.rs  debug.rs  empty.rs  ext.rs  in_memory.rs  lib.rs  map.rs  node.rs  observer.rs  on_get.rs  on_memory.rs  snapshot.rs
libs/core/qrs_datasrc/src/ext/: on_change.rs  on_req.rs  snapshot.rs
libs/core/qrs_finance/: Cargo.toml
libs/core/qrs_finance/src/: ccy.rs  daycount.rs  lib.rs  rate.rs
libs/core/qrs_finance/src/daycount/: act360.rs  act365f.rs  nl360.rs  nl365.rs  traits.rs
libs/core/qrs_finance/src/rate/: act365f.rs  traits.rs
libs/core/qrs_fincore/: Cargo.toml
libs/core/qrs_fincore/src/: ccy.rs  daycount.rs  holiday_adj.rs  lib.rs
libs/core/qrs_fincore/src/daycount/: act360.rs  act365f.rs  nl360.rs  nl365.rs
libs/core/qrs_math/: Cargo.toml
libs/core/qrs_math/src/: func1d.rs  interp1d.rs  lib.rs  num.rs  rounding.rs
libs/core/qrs_math/src/func1d/: continuity.rs  findiff.rs
libs/core/qrs_math/src/interp1d/: _knots.rs  chermite.rs  lerp.rs  pwconst.rs  traits.rs
libs/core/qrs_math/src/num/: elementary_fns.rs  partial_ord_minmax.rs  relpos.rs  scalar.rs
libs/core/qrs_math/testdata/interp1d/: chermite.CatmullRom.bwd.out.json  chermite.CatmullRom.bwd.serialized.json  chermite.CatmullRom.cen.in.json  chermite.CatmullRom.cen.out.json  chermite.CatmullRom.cen.serialized.json  chermite.py
libs/domain/qcore/: Cargo.toml
libs/domain/qcore/qcore_derive/: Cargo.toml
libs/domain/qcore/qcore_derive/src/: lib.rs  listener.rs  node.rs  notifier.rs
libs/domain/qcore/src/: chrono.rs  datasrc.rs  interp1d.rs  lib.rs
libs/domain/qcore/src/chrono/: calendar.rs  calendar_src.rs  calendar_sym.rs  datetime.rs  datetime_builder.rs  duration.rs  velocity.rs
libs/domain/qcore/src/datasrc/: _private.rs  cache_key.rs  derive.rs  ext.rs  inout.rs  map.rs  node.rs  on_memory.rs  overridable.rs  private.rs  snapshot.rs  with_logger.rs
libs/domain/qcore/src/func1d/: traits.rs
libs/domain/qcore/src/interp1d/: _knots.rs  lerp.rs  traits.rs
libs/domain/qcore/src/math/: num.rs
libs/domain/qcore/src/num/: cmp.rs  scalar.rs  vector.rs
libs/domain/qfincore/: Cargo.toml
libs/domain/qfincore/src/: ccy.rs  daycount.rs  fxmkt.rs  lib.rs  quantity.rs  vol.rs  yld.rs
libs/domain/qfincore/src/daycount/: act360.rs  act365f.rs  bd252.rs  traits.rs  variant.rs
libs/domain/qfincore/src/fxmkt/: spot.rs
libs/domain/qfincore/src/quantity/: ccy.rs  fxrate.rs  vol.rs  yld.rs
libs/domain/qmodel/: Cargo.toml
libs/domain/qmodel/src/: curve.rs  fx.rs  ir.rs  lib.rs  lnvol.rs
libs/domain/qmodel/src/curve/: adjust.rs  atom.rs  composite.rs  curve_impl.rs  traits.rs
libs/domain/qmodel/src/fx/: fwd.rs  spot.rs
libs/domain/qmodel/src/ir/: dcrv.rs
libs/domain/qmodel/src/lnvol/: curve.rs  traits.rs
libs/domain/qmodel/src/volsurf/: slice.rs
libs/domain/qrs_core/: Cargo.toml
libs/domain/qrs_core/qrs_core_derive/: Cargo.toml
libs/domain/qrs_core/qrs_core_derive/src/: lib.rs
libs/domain/qrs_core/src/: chrono.rs  collection.rs  datasrc.rs  finance.rs  func1d.rs  interp1d.rs  lib.rs  num.rs
libs/domain/qrs_core/src/chrono/: calendar.rs  calendar_src.rs  calendar_sym.rs  datetime.rs  datetime_builder.rs  duration.rs  rate.rs  timezone.rs  velocity.rs
libs/domain/qrs_core/src/collection/: lazy_typed_vec.rs  vec_buffer.rs
libs/domain/qrs_finance/: Cargo.toml
libs/domain/qrs_finance/qrs_finance_derive/: Cargo.toml
libs/domain/qrs_finance/src/: ccy.rs  core.rs  daycount.rs  lib.rs  products.rs
libs/domain/qrs_model/: Cargo.toml
libs/domain/qrs_model/src/: curve.rs  lib.rs
libs/domain/qrs_product/: Cargo.toml
libs/domain/qrs_product/src/: core.rs
libs/pricing/qrs_modelcore/: Cargo.toml
libs/pricing/qrs_modelcore/src/: curve.rs
scripts/qrs-scripts/: Cargo.toml
scripts/qrs-scripts/src/: gen_schema.rs  main.rs  utils.rs
scripts/qrs_scripts/: Cargo.toml
scripts/qrs_scripts/src/: gen_schema.rs  main.rs
scripts/qrs_scripts/src/gen_schema/: schema_cleaner.rs  schema_collector.rs
scripts/qrscript/: Cargo.toml
scripts/qrscript/src/: cmds.rs  main.rs  util.rs
scripts/qrscript/src/cmds/: gen_doc_schema.rs  gen_test_data_interp1d.rs
scripts/qrscript/src/util/: interactive_cmd.rs  path.rs
(+452 files in other folders)
