[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
exclude = ["scripts/**"]

[workspace]
resolver = "2"
members = [
  "libs/core/qautodiff",
  "libs/core/qchrono",
  "libs/core/qcollections",
  "libs/core/qmath",
  "libs/domain/qfincore",
  "libs/domain/qmodel",
  "libs/domain/qproduct",
  "sandbox/rs",
]

[workspace.dependencies]
anyhow = { version = "1.0.86" }
approx = { version = "0.5.1" }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
derivative = { version = "2.2.0" }
itertools = { version = "0.13.0" }
libm = { version = "0.2.8" }
maplit = { version = "1.0.2" }
mockall = { version = "0.13.0" }
moka = { version = "0.12.8", features = ["sync"] }
num = { version = "0.4.3" }
ordered-float = { version = "4.2.1" }
peg = { version = "0.8.3" }
regex = { version = "1.10.5" }
rstest = { version = "0.22.0" }
rstest_reuse = { version = "0.7.0" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
schemars = { version = "0.8.21", features = ["chrono"] }
smallvec = { version = "1.13.2" }
static_assertions = { version = "1.1.0" }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = { version = "1.0.62" }
uuid = { version = "1.10.0" }

qcollections = { path = "libs/core/qcollections" }
qchrono = { path = "libs/core/qchrono" }
qmath = { path = "libs/core/qmath" }
qfincore = { path = "libs/domain/qfincore" }
qproduct = { path = "libs/domain/qproduct" }
qmodel = { path = "libs/domain/qmodel" }
