[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
exclude = []

[workspace]
resolver = "2"
members = [
  "libs/core/qautodiff",
  "libs/core/qchrono",
  "libs/core/qcollections",
  "libs/core/qmath",
  "libs/domain/qfincore",
  "libs/domain/qmodel",
  "libs/domain/qproduct",
  "sandbox/rs",
  "scripts/qrscript",
]

[workspace.dependencies]
anyhow = { version = "1.0" }
approx = { version = "0.5" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
derivative = { version = "2.2" }
dialoguer = { version = "0.11" }
env_logger = { version = "0.11" }
git2 = { version = "0.19" }
itertools = { version = "0.13" }
libm = { version = "0.2" }
log = { version = "0.4" }
maplit = { version = "1.0" }
mockall = { version = "0.13" }
moka = { version = "0.12", features = ["sync"] }
num = { version = "0.4" }
ordered-float = { version = "4.2" }
peg = { version = "0.8" }
regex = { version = "1.10" }
rstest = { version = "0.23" }
rstest_reuse = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
schemars = { version = "0.8", features = ["chrono"] }
smallvec = { version = "1.13" }
static_assertions = { version = "1.1" }
strum = { version = "0.26", features = ["derive"] }
thiserror = { version = "1.0" }
uuid = { version = "1.10" }

qcollections = { path = "libs/core/qcollections" }
qchrono = { path = "libs/core/qchrono" }
qmath = { path = "libs/core/qmath" }
qfincore = { path = "libs/domain/qfincore" }
qproduct = { path = "libs/domain/qproduct" }
qmodel = { path = "libs/domain/qmodel" }
