[package]
name = "qrs-scripts"
version.workspace = true
edition.workspace = true
exclude.workspace = true

[dependencies]
# external
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }

# internal
qcore = { workspace = true }
