[package]
name = "qrs_scripts"
version.workspace = true
edition.workspace = true
exclude.workspace = true

[dependencies]
# external
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# internal
qrs_chrono = { workspace = true, features = ["serde"] }
qrs_math = { workspace = true, features = ["serde"] }
qrs_model = { workspace = true, features = ["serde"] }
