[package]
name = "qrscript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
env_logger = { workspace = true }
git2 = { workspace = true }
log = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

qchrono = { workspace = true }
qfincore = { workspace = true }
qmath = { workspace = true }
qmodel = { workspace = true }
