[package]
name = "qrs_chrono"
version.workspace = true
edition.workspace = true
exclude.workspace = true

[features]
serde = ["dep:serde", "dep:serde_json", "dep:schemars", "qrs_datasrc/serde"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
maplit = { workspace = true }
peg = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }

# internal
qrs_math = { workspace = true, features = ["chrono"] }
qrs_datasrc = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_json = { workspace = true }
static_assertions = { workspace = true }
