[package]
name = "qrs_collections"
version.workspace = true
edition.workspace = true
exclude.workspace = true
rust-version.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:schemars"]

[dependencies]
itertools = { workspace = true }
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_json = { workspace = true }
