[package]
name = "qrs_datasrc"
version.workspace = true
edition.workspace = true
exclude.workspace = true
rust-version.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:schemars"]
derive = []

[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
lru = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }
qrs_datasrc_derive = { path = "./qrs_datasrc_derive" }

[dev-dependencies]
maplit = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_json = { workspace = true }
