[package]
name = "qrs_fincore"
version.workspace = true
edition.workspace = true
exclude.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:schemars"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
strum = { workspace = true }

# internal
qrs_chrono = { workspace = true }
qrs_math = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
