[package]
name = "qcore"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
static_assertions = { workspace = true }
rust_decimal = { workspace = true }
peg = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
