[package]
name = "qcore"
version.workspace = true
edition.workspace = true

[features]
default = ["derive"]
derive = ["qcore_derive"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
dyn-clone = { workspace = true }
num = { workspace = true }
maplit = { workspace = true }
moka = { workspace = true }
serde = { workspace = true }
static_assertions = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
peg = { workspace = true }
uuid = { workspace = true }

# internal
qcore_derive = { path = "qcore_derive", optional = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
