[package]
name = "qfincore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
strum = { workspace = true }

qchrono = { workspace = true }
qmath = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rstest = { workspace = true }
