[package]
name = "qrs_core"
version.workspace = true
edition.workspace = true
exclude.workspace = true

[features]
default = ["derive"]
derive = ["qrs_core_derive"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
derivative = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
maplit = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
peg = { workspace = true }
uuid = { workspace = true }

# internal
qrs_core_derive = { path = "qrs_core_derive", optional = true }

[dev-dependencies]
approx = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
static_assertions = { workspace = true }
