[package]
name = "qrs_finance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:schemars"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }

# internal
qrs_collections = { workspace = true }
qrs_chrono = { workspace = true }
qrs_finance_derive = { path = "./qrs_finance_derive" }
qrs_math = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
