[package]
name = "qrs_finance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[features]
default = []

[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

# internal
qrs_collections = { workspace = true }
qrs_chrono = { workspace = true, features = ["serde"] }
qrs_datasrc = { workspace = true }
qrs_finance_derive = { path = "./qrs_finance_derive" }
qrs_math = { workspace = true, features = ["serde"] }

[dev-dependencies]
approx = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
serde_yaml = { workspace = true }
