[package]
name = "qrs_model"
version.workspace = true
edition.workspace = true
exclude.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
num = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }

# internal
qrs_core = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
