[package]
name = "qrs_product"
version.workspace = true
edition.workspace = true
exclude.workspace = true

[features]
default = []
serde = [
  "dep:serde",
  "dep:schemars",
  "qrs_collections/serde",
  "qrs_chrono/serde",
  "qrs_fincore/serde",
]

[dependencies]
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

# internal
qrs_collections = { workspace = true }
qrs_chrono = { workspace = true }
qrs_fincore = { workspace = true }
