[package]
name = "qrs_datasrc_derive"
version.workspace = true
edition.workspace = true
exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
proc-macro-error = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
