[package]
name = "qrs_finance_derive"
version.workspace = true
edition.workspace = true
exclude.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
proc-macro-error = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
